--- a/public/css/styles/index.css
+++ b/public/css/styles/index.css
@@ -6,9 +6,20 @@
     border: 5px dashed black !important;
 }
 
-
 .restaurant-open-modal:hover {
     cursor: pointer;
     color: blue !important;
     text-decoration: underline !important;
+}
+
+.img-wrap {
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+}
+
+.cover {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
