--- a/views/objects_editor.hbs
+++ b/views/objects_editor.hbs
@@ -130,7 +130,7 @@
                     </div>
                     <div class="form-group">
                         <label for="regOfProduct">Субъект РФ</label>
-                        <input type="text" class="form-control" id="regOfProduct" name="region" aria-describedby="regHelp" value="Москва">
+                        <input type="text" class="form-control" id="regOfProduct" name="region" aria-describedby="regHelp">
                         <small id="regHelp" class="form-text text-muted"></small>
                     </div>
                     <div class="form-group">
