--- a/public/css/styles/index.css
+++ b/public/css/styles/index.css
@@ -13,8 +13,8 @@
 }
 
 .img-wrap {
-    width: 200px;
-    height: 200px;
+    width: 14vw;
+    height: 14vw;
     overflow: hidden;
 }
 
@@ -22,4 +22,52 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+
+@media (max-width: 575.98px) {
+    .card h4 {
+        font-size: 0.8rem;
+        font-weight: bolder;
+    }
+    .card p, .card a{
+        font-size: 0.7rem !important;
+    }
+    .btn-toolbar button{
+        font-size: 0.65rem !important;
+        font-weight: bolder;
+    }
+}
+@media (min-width: 576px) and (max-width: 767.98px) {
+    .card h4 {
+        font-size: 0.9rem;
+        font-weight: bolder;
+    }
+    .card p, .card a{
+        font-size: 0.7rem !important;
+    }
+}
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .card h4 {
+        font-size: 1.1rem;
+    }
+    .card p, .card a{
+        font-size: 0.8rem !important;
+    }
+}
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    .card h4 {
+        font-size: 1.3rem;
+    }
+    .card p, .card a{
+        font-size: 0.9rem !important;
+    }
+}
+@media (min-width: 1200px) {
+    .card h4 {
+        font-size: 1.5rem;
+    }
+    .card p, .card a{
+        font-size: 1rem !important;
+    }
 }
