--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,23 +1,3 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">MAPPO</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item {{#if isIndex}} active {{/if}}">
-                <a class="nav-link" href="/" style="font-weight:bolder;">Карта</a>
-            </li>
-            <li class="nav-item {{#if isObjectsEditor}} active {{/if}}">
-                <a class="nav-link" href="/objects_editor">Редактор "Объекты"</a>
-            </li>
-            <li class="nav-item {{#if isCuisinesEditor}} active {{/if}}">
-                <a class="nav-link" href="/cuisines_editor">Редактор "Кухни"</a>
-            </li>
-            <li class="nav-item {{#if isPartnersEditor}} active {{/if}}">
-                <a class="nav-link" href="/partners_editor">Редактор "Участники"</a>
-            </li>
-        </ul>
-    </div>
+    <a class="navbar-brand" href="/">Undermining Online</a>
 </nav>
