--- a/public/css/styles/index.css
+++ b/public/css/styles/index.css
@@ -1,73 +1,28 @@
-.card-hoverable {
-    background-color: #6fb5ff !important;
-}
-
-.card-choosen {
-    border: 5px dashed black !important;
-}
-
-.restaurant-open-modal:hover {
-    cursor: pointer;
-    color: blue !important;
-    text-decoration: underline !important;
-}
-
-.img-wrap {
-    width: 14vw;
-    height: 14vw;
-    overflow: hidden;
-}
-
-.cover {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
 
 
-@media (max-width: 575.98px) {
-    .card h4 {
-        font-size: 0.8rem;
-        font-weight: bolder;
-    }
-    .card p, .card a{
-        font-size: 0.7rem !important;
-    }
-    .btn-toolbar button{
-        font-size: 0.65rem !important;
-        font-weight: bolder;
-    }
+.field-row {
+    display: flex;
 }
-@media (min-width: 576px) and (max-width: 767.98px) {
-    .card h4 {
-        font-size: 0.9rem;
-        font-weight: bolder;
-    }
-    .card p, .card a{
-        font-size: 0.7rem !important;
-    }
+
+.cell-container {
+    display: inline-block;
+    width: 10%;
+    background-color: #ccc;
+    margin: 1% 1%;
 }
-@media (min-width: 768px) and (max-width: 991.98px) {
-    .card h4 {
-        font-size: 1.1rem;
-    }
-    .card p, .card a{
-        font-size: 0.8rem !important;
-    }
+.cell-container.c-hover {
+    background-color: #9d9d9d;;
 }
-@media (min-width: 992px) and (max-width: 1199.98px) {
-    .card h4 {
-        font-size: 1.3rem;
-    }
-    .card p, .card a{
-        font-size: 0.9rem !important;
-    }
+.cell-container.white {
+    background-color: rgb(250, 250, 250) !important;
 }
-@media (min-width: 1200px) {
-    .card h4 {
-        font-size: 1.5rem;
-    }
-    .card p, .card a{
-        font-size: 1rem !important;
-    }
+.cell-container.red {
+    background-color: rgb(223, 84, 84) !important;
+}
+.cell-container.blue {
+    background-color: rgb(89, 89, 226) !important;
+}
+.cell-element {
+    height: 0;
+    padding-bottom: 100%;
 }
